fixed icon minimum width

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -1015,8 +1015,8 @@ $ping-radius: 100px;
             gap: 6px;
 
             > i {
-                width: 18px;
-                text-align: right;
+                min-width: 20px;
+                text-align: center;
             }
         }
     }
