made visibility checkbox into a toggle button

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -250,6 +250,9 @@ button.big {
 button.compact {
     padding: 4px 8px;
 }
+button.compact.big {
+    box-shadow: none;
+}
 button.toggle.active {
     background-color: var(--color-primary) !important;
     color: var(--color-text-inverse) !important;
