introduced "pick from assets" / "upload image"

--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -190,36 +190,7 @@
     }
 }
 
-#uploadPanel {
-    > div {
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        min-width: 50vh;
-        min-height: 30vh;
-        position: relative;
-        box-shadow: 0 0 4px #0009;
-        box-sizing: border-box;
-        transition-duration: 0.1s;
-        outline: 2px dashed transparent;
-        outline-offset: 4px;
-
-        &.drag {
-            outline-color: white;
-            outline-offset: 0;
-            background-color: #aaa5;
-            filter: contrast(0.5) brightness(1.5);
-        }
-
-        > *:not(img) {
-            position: absolute;
-        }
-    }
-}
-
-#registerPanel, #resetPanel {
-    min-width: 320px;
-
+.panel {
     section {
         position: initial;
         overflow: hidden;
@@ -236,6 +207,10 @@
     &.show > section.show {
         pointer-events: all;
     }
+}
+
+#registerPanel, #resetPanel {
+    min-width: 320px;
 
     form {
         display: inherit;
