--- a/web/sass/upload.scss
+++ b/web/sass/upload.scss
@@ -6,6 +6,31 @@
     #dragText {
         user-select: none;
     }
+
+    > div {
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        min-width: 50vh;
+        min-height: 30vh;
+        position: relative;
+        box-shadow: 0 0 4px #0009;
+        box-sizing: border-box;
+        transition-duration: 0.1s;
+        outline: 2px dashed transparent;
+        outline-offset: 4px;
+
+        &.drag {
+            outline-color: white;
+            outline-offset: 0;
+            background-color: #aaa5;
+            filter: contrast(0.5) brightness(1.5);
+        }
+
+        > *:not(img) {
+            position: absolute;
+        }
+    }
 }
 
 .crop-container {
@@ -56,6 +81,24 @@
         > .corner:not(:active) {
             border-color: #fff0;
             box-shadow: 0 0 10px #0000;
+        }
+    }
+}
+
+#imagePrePick {
+    display: flex;
+    flex-direction: column;
+    padding: 4px;
+    transition: transform 0.2s, opacity 0.1s;
+
+    > button {
+        background-color: var(--color-background);
+        border-radius: 0%;
+        opacity: 0.85;
+
+        &:hover {
+            // background-color: var(--color-not-intense);
+            opacity: 1;
         }
     }
 }
