--- a/web/sass/upload.scss
+++ b/web/sass/upload.scss
@@ -1,3 +1,5 @@
+@use 'base.scss';
+
 #uploadPanel {
     .hide {
         display: none;
@@ -89,16 +91,48 @@
     display: flex;
     flex-direction: column;
     padding: 4px;
-    transition: transform 0.2s, opacity 0.1s;
+    transition: transform 0.05s, opacity 0.05s;
 
     > button {
         background-color: var(--color-background);
         border-radius: 0%;
-        opacity: 0.85;
 
-        &:hover {
-            // background-color: var(--color-not-intense);
-            opacity: 1;
-        }
+        &:hover { background-color: var(--color-header); }
+        &:active { background-color: var(--color-button-active); }
+    }
+}
+
+#assetPanel {
+    align-items: center;
+    padding-top: 16px;
+}
+
+#assetGrid {
+    display: grid;
+    grid-template-columns: repeat(8, max-content);
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 40vh;
+    max-height: 316px;
+    background-color: var(--color-background);
+    border: 4px solid var(--color-background);
+    padding-right: 4px;
+    gap: 4px;
+
+    > img {
+        @extend %responsive;
+        cursor: pointer;
+        width: 80px;
+        height: 80px;
+        background-color: var(--color-not-intense);
+
+        &:hover { background-color: var(--color-button-hover); }
+        &:active { background-color: var(--color-button-active); }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #assetGrid {
+        grid-template-columns: repeat(5, max-content);
     }
 }
