prevent multiple connections to one account

--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -51,6 +51,7 @@
 
     span {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         gap: 16px;
         align-items: center;
