--- a/web/sass/upload.scss
+++ b/web/sass/upload.scss
@@ -112,19 +112,19 @@
     grid-template-columns: repeat(8, max-content);
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 40vh;
     max-height: 316px;
     background-color: var(--color-background);
     border: 4px solid var(--color-background);
     padding-right: 4px;
     gap: 4px;
 
-    > img {
+    > div {
         @extend %responsive;
         cursor: pointer;
-        width: 80px;
-        height: 80px;
+        width: 96px;
+        height: 96px;
         background-color: var(--color-not-intense);
+        background-size: cover;
 
         &:hover { background-color: var(--color-button-hover); }
         &:active { background-color: var(--color-button-active); }
