show "drag & drop" option regardless of image type

--- a/web/sass/upload.scss
+++ b/web/sass/upload.scss
@@ -93,6 +93,8 @@
     padding: 4px;
     transition: transform 0.05s, opacity 0.05s;
 
+    &.no-assets > :first-child { display: none; }
+
     > button {
         background-color: var(--color-background);
         border-radius: 0%;
