--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -15,7 +15,8 @@
 }
 
 #initiativePanel {
-    > span {
+    span {
+        display: flex;
         justify-content: center;
         font-size: 20px;
     }
@@ -833,7 +834,7 @@
             --length: 1;
         }
     }
-    &.accessible:hover, &.hovered {
+    &.accessible:hover {
         border-color: var(--color-primary) !important;
     }
     &.selected {
@@ -849,7 +850,7 @@
             border: 3px solid var(--color-primary);
         }
     }
-    &.active {
+    &.active, &.hovered {
         border-color: white !important;
 
         > .ring {
