--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -268,6 +268,11 @@ button.toggle.active {
     background-color: var(--color-primary) !important;
     color: var(--color-text-inverse) !important;
 }
+button.toggle.with-tooltip {
+    > span:last-of-type {
+        color: white;
+    }
+}
 
 .good:not(:disabled) {
     color: var(--color-good) !important;
@@ -507,6 +512,15 @@ li {
     background-origin: border-box;
     background-position: center;
     background-clip: content-box;
+}
+
+.elevate {
+    padding-bottom: 12px;
+    box-shadow: 0 -4px 0 #0007 inset;
+
+    &:not(:hover) {
+        background-color: var(--color-not-intense);
+    }
 }
 
 .roster {
