--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -146,6 +146,15 @@
     }
 }
 
+.left-col {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    right: calc(100% + 8px);
+    gap: 8px;
+}
+
 #joinPanel {
     width: 32vw;
     align-items: center;
