--- a/web/sass/map_tab.scss
+++ b/web/sass/map_tab.scss
@@ -323,6 +323,7 @@
     transition-property: opacity, transform;
     transition-duration: 0.2s;
     font-size: 16px;
+    z-index: 1;
 
     &.display-below {
         transform: translate(-50%, 20px);
@@ -354,6 +355,7 @@
 
     button {
         padding: 6px 4px;
+        background-color: transparent;
     }
 }
 
