--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -696,7 +696,7 @@ footer {
     display: flex;
     justify-content: center;
     
-    > span:last-of-type {
+    > span {
         transition-duration: 0.1s;
         position: absolute;
         bottom: 100%;
