hide scene selector in demo

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -562,6 +562,10 @@
         #player > :not(button) { max-width: 100%; }
     }
 
+    &.demo .no-demo {
+        @extend .invisible;
+    }
+
     > *:not(:last-child) {
         border-right: 2px solid var(--color-separator);
     }
