--- a/web/sass/fog_of_war.scss
+++ b/web/sass/fog_of_war.scss
@@ -23,11 +23,6 @@ $margin: 80px;
         height: 100%;
     }
 
-    .polypattern, .positive-pole {
-        fill: url(#barrier) !important;
-        opacity: 0.7;
-    }
-
     .polypattern, #polynegdisplay {
         stroke: #fb8;
         stroke-width: $outline;
@@ -51,7 +46,12 @@ $margin: 80px;
     }
 }
 
-#session:not(.is-dm) #polymaskWrapper {
+.polypattern, #polyMaskWrapper.opaque .positive-pole {
+    fill: url(#barrier) !important;
+    opacity: 0.7;
+}
+
+#polymaskWrapper.opaque {
     z-index: 2;
     opacity: 1 !important;
 
