fixed initiative tracker bug when changing scenes

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -954,6 +954,7 @@ $ping-radius: 100px;
 #inactiveSceneWarning {
     @extend %responsive;
     position: absolute;
+    z-index: 6;
     top: 16px;
     background-color: var(--color-background);
     box-shadow: 0 0 8px 2px #0006;
